Adding the dependencies injection techniques.
1. Adding property injection methods.
2. Adding constructor injection methods.
3. Adding ways to handle bean lifecycle.

--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,14 @@
 				3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!--This below dependency is added to use the Annotation technique to handle bean lifecycle.
+			It is required if you are using Java 8 above
+		-->
+		<dependency>
+		    <groupId>javax.annotation</groupId>
+		    <artifactId>javax.annotation-api</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
 	</dependencies>
 </project>
